feat: 实现邮件发送功能及相关数据模型
