# bluespot-backend/internal/model/mail_model.go
@@ -1,0 +1,7 @@
+package model
+
+type SendMailRequest struct {
+	To      string `json:"to" binding:"required,email"`
+	Subject string `json:"subject" binding:"required"`
+	Body    string `json:"body" binding:"required"`
+}
